--- a/portfolio/apps/dashboard-app/dashboard/project.json
+++ b/portfolio/apps/dashboard-app/dashboard/project.json
@@ -1,25 +1,25 @@
 {
-  "name": "dashboard",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "name": "dashboard-app-dashboard",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "sourceRoot": "apps/dashboard/src",
+  "sourceRoot": "apps/dashboard-app/dashboard/src",
   "prefix": "portfolio",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/dashboard",
-        "index": "apps/dashboard/src/index.html",
-        "main": "apps/dashboard/src/main.ts",
+        "outputPath": "dist/apps/dashboard-app/dashboard",
+        "index": "apps/dashboard-app/dashboard/src/index.html",
+        "main": "apps/dashboard-app/dashboard/src/main.ts",
         "polyfills": ["zone.js"],
-        "tsConfig": "apps/dashboard/tsconfig.app.json",
+        "tsConfig": "apps/dashboard-app/dashboard/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
-          "apps/dashboard/src/favicon.ico",
-          "apps/dashboard/src/assets"
+          "apps/dashboard-app/dashboard/src/favicon.ico",
+          "apps/dashboard-app/dashboard/src/assets"
         ],
-        "styles": ["apps/dashboard/src/styles.scss"],
+        "styles": ["apps/dashboard-app/dashboard/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -53,10 +53,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "dashboard:build:production"
+          "browserTarget": "dashboard-app-dashboard:build:production"
         },
         "development": {
-          "browserTarget": "dashboard:build:development"
+          "browserTarget": "dashboard-app-dashboard:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -64,7 +64,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "dashboard:build"
+        "browserTarget": "dashboard-app-dashboard:build"
       }
     },
     "lint": {
@@ -72,8 +72,8 @@
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
-          "apps/dashboard/**/*.ts",
-          "apps/dashboard/**/*.html"
+          "apps/dashboard-app/dashboard/**/*.ts",
+          "apps/dashboard-app/dashboard/**/*.html"
         ]
       }
     },
@@ -81,7 +81,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/dashboard/jest.config.ts",
+        "jestConfig": "apps/dashboard-app/dashboard/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
