--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -3,4 +3,4 @@ version: "3"
 tasks:
   workspace:
     cmds:
-      - npx create-nx-workspace@latest --name="portfolio" --preset=angular-monorepo --appName="dashboard" --style=scss --nxCloud=false
+      - npx create-nx-workspace@latest --name="portfolio" --preset=angular-monorepo --appName="dashboard-app/dashboard" --style=scss --nxCloud=false
