--- a/portfolio/apps/dashboard-app/dashboard-e2e/project.json
+++ b/portfolio/apps/dashboard-app/dashboard-e2e/project.json
@@ -19,12 +19,18 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/dashboard-app/dashboard-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": [
+          "apps/dashboard-app/dashboard-e2e/**/*.{js,ts}"
+        ]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["dashboard-app-dashboard"]
+  "implicitDependencies": [
+    "dashboard-app-dashboard"
+  ]
 }
