--- a/portfolio/apps/dashboard-app/dashboard/project.json
+++ b/portfolio/apps/dashboard-app/dashboard/project.json
@@ -7,19 +7,26 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/dashboard-app/dashboard",
         "index": "apps/dashboard-app/dashboard/src/index.html",
         "main": "apps/dashboard-app/dashboard/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/dashboard-app/dashboard/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
           "apps/dashboard-app/dashboard/src/favicon.ico",
           "apps/dashboard-app/dashboard/src/assets"
         ],
-        "styles": ["apps/dashboard-app/dashboard/src/styles.scss"],
+        "styles": [
+          "@angular/material/prebuilt-themes/indigo-pink.css",
+          "apps/dashboard-app/dashboard/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -69,7 +76,9 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
         "lintFilePatterns": [
           "apps/dashboard-app/dashboard/**/*.ts",
@@ -79,7 +88,9 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/dashboard-app/dashboard/jest.config.ts",
         "passWithNoTests": true
