--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -25,10 +25,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.2.2",
+    "@angular-devkit/core": "~15.1.0",
+    "@angular-devkit/schematics": "~15.1.0",
     "@angular-eslint/eslint-plugin": "~15.0.0",
     "@angular-eslint/eslint-plugin-template": "~15.0.0",
     "@angular-eslint/template-parser": "~15.0.0",
-    "@angular/cli": "~15.1.0",
+    "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "15.2.2",
     "@angular/language-service": "15.2.2",
     "@nrwl/cypress": "15.8.6",
@@ -36,6 +38,7 @@
     "@nrwl/jest": "15.8.6",
     "@nrwl/linter": "15.8.6",
     "@nrwl/workspace": "15.8.6",
+    "@schematics/angular": "~15.1.0",
     "@types/jest": "29.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -61,4 +64,3 @@
     "typescript": "~4.9.5"
   }
 }
-
